--- a/example/index.html
+++ b/example/index.html
@@ -4,8 +4,14 @@
     <title>React Tab Factory</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <style>
+      .active {
+        background: yellow;
+      }
+    </style>
   </head>
   <body>
     <div id="content"></div>
+    <script src="bundle.js"></script>
   </body>
 </html>
