Add panel in wip

--- a/example/index.html
+++ b/example/index.html
@@ -5,8 +5,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <style>
+      .tab {
+        background: cyan; 
+      }
+
       .active {
         background: yellow;
+      }
+
+      .panel {
+        background: green;
       }
     </style>
   </head>
