--- a/example/index.html
+++ b/example/index.html
@@ -82,6 +82,7 @@
     </style>
   </head>
   <body>
+    <h1>React Tab Factory</h1>
     <div id="content"></div>
     <script src="bundle.js"></script>
   </body>
