--- a/example/index.html
+++ b/example/index.html
@@ -84,6 +84,6 @@
   <body>
     <h1>React Tab Factory</h1>
     <div id="content"></div>
-    <script src="bundle.js"></script>
+    <script src="build/bundle.js"></script>
   </body>
 </html>
